--- a/index.html
+++ b/index.html
@@ -488,54 +488,6 @@
             font-weight: 600;
         }
 
-        /* Leaderboard Section */
-        .leaderboard {
-            background: rgba(26, 31, 58, 0.8);
-            border: 2px solid rgba(255, 235, 59, 0.3);
-            border-radius: 10px;
-            padding: 30px;
-            margin-bottom: 60px;
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .leaderboard h3 {
-            color: var(--accent-yellow);
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .lb-entry {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 12px;
-            border-bottom: 1px solid rgba(255, 235, 59, 0.2);
-            transition: all 0.3s;
-        }
-
-        .lb-entry:hover {
-            background: rgba(255, 235, 59, 0.1);
-        }
-
-        .lb-rank {
-            font-weight: bold;
-            color: var(--accent-yellow);
-            min-width: 30px;
-        }
-
-        .lb-name {
-            flex: 1;
-            margin-left: 15px;
-            color: var(--text-main);
-        }
-
-        .lb-score {
-            color: var(--accent-green);
-            font-weight: 600;
-        }
-
         /* CTA Section */
         .cta-section {
             text-align: center;
@@ -685,6 +637,7 @@
             display: flex;
             justify-content: center;
             gap: 25px;
+            flex-wrap: wrap;
         }
 
         .social-links a {
@@ -734,18 +687,59 @@
             margin: 20px auto;
         }
 
-        /* Responsive */
+        /* Mobile Responsive */
+        @media (max-width: 1024px) {
+            h1 { font-size: 2.5rem; }
+            .subtitle { font-size: 1.1rem; }
+            .section { padding: 60px 20px; }
+            .section-title { font-size: 1.5rem; }
+        }
+
         @media (max-width: 768px) {
             h1 { font-size: 2rem; }
-            .subtitle { font-size: 1rem; }
+            .subtitle { font-size: 0.9rem; }
             .game-grid { grid-template-columns: 1fr; }
-            .stats-bar { gap: 30px; }
+            .stats-bar { gap: 30px; flex-direction: column; }
             .nav-links { display: none; }
-            .section { padding: 50px 20px; }
-            .section-title { font-size: 1.3rem; }
+            .section { padding: 50px 15px; }
+            .section-title { font-size: 1.2rem; }
+            .section-title::before,
+            .section-title::after { margin: 0 10px; }
             .btn-group { flex-direction: column; }
-            .roadmap-item { flex-direction: column !important; }
+            .btn-primary, .btn-secondary { width: 100%; }
+            .roadmap-item { flex-direction: column !important; gap: 15px; }
             .roadmap-icon { margin: 0 auto; }
+            .cta-section { padding: 40px 20px; }
+            .features { grid-template-columns: 1fr; }
+            .tech-stack { grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); }
+            .community-grid { grid-template-columns: 1fr; }
+            .social-links { gap: 15px; }
+            .footer-links { gap: 15px; }
+            header { padding: 100px 15px 40px; }
+            nav { padding: 12px 15px; }
+            .nav-logo { font-size: 0.8rem; }
+        }
+
+        @media (max-width: 480px) {
+            h1 { font-size: 1.5rem; letter-spacing: 2px; }
+            .subtitle { font-size: 0.8rem; }
+            .tagline { font-size: 0.85rem; }
+            .stat-number { font-size: 1.5rem; }
+            .stat-label { font-size: 0.7rem; }
+            .section { padding: 40px 10px; }
+            .section-title { font-size: 1rem; }
+            .section-title::before,
+            .section-title::after { display: none; }
+            .game-grid { gap: 15px; }
+            .coming-soon-card { height: 150px; padding: 20px 10px; }
+            .coming-soon-icon { font-size: 2rem; }
+            .feature { padding: 20px; }
+            .feature-icon { font-size: 2rem; }
+            .cta-text { font-size: 1.1rem; }
+            .roadmap-icon { width: 60px; height: 60px; font-size: 1.5rem; }
+            .tech-stack { grid-template-columns: repeat(2, 1fr); }
+            .tech-icon { font-size: 2rem; }
+            .tech-name { font-size: 0.8rem; }
         }
     </style>
 </head>
@@ -821,20 +815,6 @@
                             <div class="coming-soon-badge">Coming Soon</div>
                         </div>
                     </div>
-
-                    <div class="coming-soon-card" data-aos="fade-up" data-aos-delay="400">
-                        <div class="coming-soon-content">
-                            <div class="coming-soon-icon">💥</div>
-                            <div class="coming-soon-badge">Coming Soon</div>
-                        </div>
-                    </div>
-
-                    <div class="coming-soon-card" data-aos="fade-up" data-aos-delay="500">
-                        <div class="coming-soon-content">
-                            <div class="coming-soon-icon">🎪</div>
-                            <div class="coming-soon-badge">Coming Soon</div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -888,15 +868,9 @@
                     </div>
 
                     <div class="feature" data-aos="zoom-in" data-aos-delay="700">
-                        <div class="feature-icon">📊</div>
+                        <div class="feature-icon">🏆</div>
                         <h3>Leaderboards</h3>
                         <p>Track scores, compete globally, earn bragging rights.</p>
-                    </div>
-
-                    <div class="feature" data-aos="zoom-in" data-aos-delay="800">
-                        <div class="feature-icon">🏆</div>
-                        <h3>Achievements</h3>
-                        <p>Unlock badges. Complete challenges. Prove yourself.</p>
                     </div>
                 </div>
             </div>
@@ -937,16 +911,6 @@
                         <div class="tech-icon">🎮</div>
                         <div class="tech-name">WebGL</div>
                     </div>
-
-                    <div class="tech-item" data-aos="flip-left" data-aos-delay="300">
-                        <div class="tech-icon">🎭</div>
-                        <div class="tech-name">Canvas API</div>
-                    </div>
-
-                    <div class="tech-item" data-aos="flip-left" data-aos-delay="350">
-                        <div class="tech-icon">⚛️</div>
-                        <div class="tech-name">Responsive</div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -970,7 +934,7 @@
                         <div class="roadmap-icon">2️⃣</div>
                         <div class="roadmap-content">
                             <h3>Phase 2: Expansion</h3>
-                            <p>Add 10+ more games, implement leaderboards, user accounts system, achievements.</p>
+                            <p>Add 10+ more games, implement leaderboards, user accounts system.</p>
                             <div class="roadmap-status">Upcoming</div>
                         </div>
                     </div>
@@ -1005,44 +969,8 @@
             </div>
         </div>
 
-        <!-- Leaderboard Preview -->
-        <div class="section">
-            <div class="container">
-                <h2 class="section-title">Top Players</h2>
-                
-                <div class="leaderboard">
-                    <h3>🏆 Global Leaderboard (Coming Soon)</h3>
-                    <div class="lb-entry">
-                        <div class="lb-rank">#1</div>
-                        <div class="lb-name">Your Name Here</div>
-                        <div class="lb-score">∞ pts</div>
-                    </div>
-                    <div class="lb-entry">
-                        <div class="lb-rank">#2</div>
-                        <div class="lb-name">Waiting for you</div>
-                        <div class="lb-score">— pts</div>
-                    </div>
-                    <div class="lb-entry">
-                        <div class="lb-rank">#3</div>
-                        <div class="lb-name">Play and rank up</div>
-                        <div class="lb-score">— pts</div>
-                    </div>
-                    <div class="lb-entry">
-                        <div class="lb-rank">#4</div>
-                        <div class="lb-name">Be legendary</div>
-                        <div class="lb-score">— pts</div>
-                    </div>
-                    <div class="lb-entry">
-                        <div class="lb-rank">#5</div>
-                        <div class="lb-name">Join the fight</div>
-                        <div class="lb-score">— pts</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <!-- Community Section -->
-        <div class="section" style="background: rgba(0, 0, 0, 0.3);" id="community">
+        <div class="section" id="community">
             <div class="container">
                 <h2 class="section-title">Join The Community</h2>
                 
@@ -1089,15 +1017,6 @@
                         <p>Tutorials & gameplay.</p>
                         <a href="https://youtube.com" target="_blank">
                             Subscribe <i class="fas fa-external-link-alt"></i>
-                        </a>
-                    </div>
-
-                    <div class="community-card" data-aos="flip-left" data-aos-delay="500">
-                        <div class="community-icon">🎮</div>
-                        <h3>itch.io</h3>
-                        <p>Play all games here.</p>
-                        <a href="https://itch.io" target="_blank">
-                            Explore <i class="fas fa-external-link-alt"></i>
                         </a>
                     </div>
                 </div>
