--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 200px;
+            min-height: 260px;
             position: relative;
             overflow: hidden;
             transition: all 0.3s ease;
@@ -387,7 +387,7 @@
             border-radius: 12px;
             padding: 40px 20px;
             text-align: center;
-            height: 200px;
+            min-height: 260px;
             position: relative;
             overflow: hidden;
             transition: all 0.3s ease;
