--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
             background: linear-gradient(135deg, rgba(255, 23, 68, 0.15), rgba(124, 58, 237, 0.15));
             border: 2px solid var(--accent-pink);
             border-radius: 15px;
-            margin: 60px 0;
+            margin: 0;
             position: relative;
             overflow: hidden;
         }
@@ -703,7 +703,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 20px;
-            margin-bottom: 60px;
+             margin-bottom: 0;
         }
 
         .community-card {
