--- a/index.html
+++ b/index.html
@@ -258,6 +258,14 @@
             padding: 80px 20px;
         }
 
+        .section.section--no-top {
+            padding-top: 0;
+        }
+
+        .section.section--tight-bottom {
+            padding-bottom: 20px;
+        }
+
         .section-title {
             font-family: 'Press Start 2P', cursive;
             font-size: 1.8rem;
@@ -618,7 +626,7 @@
             background: linear-gradient(135deg, rgba(255, 23, 68, 0.15), rgba(124, 58, 237, 0.15));
             border: 2px solid var(--accent-pink);
             border-radius: 15px;
-            margin: 60px 0;
+            margin: 40px 0;
             position: relative;
             overflow: hidden;
         }
@@ -703,7 +711,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 20px;
-            margin-bottom: 60px;
+            margin-bottom: 20px;
         }
 
         .community-card {
@@ -1235,7 +1243,7 @@
         </div>
 
         <!-- Community Section -->
-        <div class="section" id="community">
+        <div class="section section--tight-bottom" id="community">
             <div class="container">
                 <h2 class="section-title">Join The Community</h2>
 
@@ -1289,7 +1297,7 @@
         </div>
 
         <!-- CTA Section -->
-        <div class="section">
+        <div class="section section--no-top">
             <div class="cta-section">
                 <div class="cta-content">
                     <div class="cta-text">Ready to Join the Rage?</div>
