Add 404 page and sound controller with mute button
Introduces a custom 404.html page styled with a retro game theme. Adds a sound controller using the Web Audio API for UI sound effects, and implements a mute button in the navigation bar. Updates CSS for the mute button and integrates sound logic into interactive elements. Minor formatting improvements in index.html and style.css.

--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RageByters | Web Game Arcade</title>
 
-    <meta name="description" content="RageByters: A collection of bite-sized, single-player web games designed to challenge your rage. Open source and community driven.">
-    
+    <meta name="description"
+        content="RageByters: A collection of bite-sized, single-player web games designed to challenge your rage. Open source and community driven.">
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ragebyters.github.io/">
     <meta property="og:title" content="RageByters | Web Game Arcade">
-    <meta property="og:description" content="Play bite-sized, open-source rage games instantly in your browser. No downloads, just chaos.">
+    <meta property="og:description"
+        content="Play bite-sized, open-source rage games instantly in your browser. No downloads, just chaos.">
     <meta property="og:image" content="https://ragebyters.github.io/assets/images/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://ragebyters.github.io/">
     <meta property="twitter:title" content="RageByters | Web Game Arcade">
-    <meta property="twitter:description" content="Play bite-sized, open-source rage games instantly in your browser. No downloads, just chaos.">
+    <meta property="twitter:description"
+        content="Play bite-sized, open-source rage games instantly in your browser. No downloads, just chaos.">
     <meta property="twitter:image" content="https://ragebyters.github.io/assets/images/logo.png">
 
     <!-- Favicon -->
@@ -51,6 +54,9 @@
             <img src="assets/images/logo.png" alt="RageByters Logo" style="height: 30px;">
             RageByters
         </a>
+        <button id="mute-btn" title="Toggle Sound">
+            <i class="fas fa-volume-up"></i>
+        </button>
         <div class="hamburger">
             <i class="fas fa-bars"></i>
         </div>
