Add PWA support and retro grid background
Introduces Progressive Web App features with manifest.json and service worker (sw.js) for offline caching. Adds a synthwave retro grid background via background.js and updates index.html and style.css to support the new canvas effect.

--- a/index.html
+++ b/index.html
@@ -42,11 +42,18 @@
     <!-- Typed.js for text animation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 
+    <!-- PWA -->
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#0a0e27">
+    <link rel="apple-touch-icon" href="assets/images/logo.png">
+
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
+    <!-- Retro Grid Background -->
+    <canvas id="bg-canvas"></canvas>
 
     <!-- Navigation -->
     <nav>
@@ -408,6 +415,7 @@
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/background.js"></script>
 
 </body>
 
