--- a/index.html
+++ b/index.html
@@ -117,13 +117,15 @@
                         </div>
                     </a>
 
-                    <!-- COMING SOON GAMES -->
-                    <div class="coming-soon-card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="coming-soon-content">
-                            <div class="coming-soon-icon">🎯</div>
-                            <div class="coming-soon-badge">Coming Soon</div>
+                    <!-- TYPING TEST GAME -->
+                    <a href="/utilty-typing-test/" class="game-card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="game-card-content">
+                            <div class="game-icon">⌨️</div>
+                            <div class="game-title">Typing Test</div>
+                            <div class="game-desc">Test your speed and precision under arcade pressure.</div>
+                            <div class="game-badge">New</div>
                         </div>
-                    </div>
+                    </a>
 
                     <div class="coming-soon-card" data-aos="fade-up" data-aos-delay="200">
                         <div class="coming-soon-content">
