--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                         </div>
                     </a>
 
-                    <!-- TYPING TEST GAME -->
+                    <div class="game-grid">
                     <a href="/utilty-typing-test/" class="game-card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="game-card-content">
+                         <div class="game-card-content">
                             <div class="game-icon">⌨️</div>
                             <div class="game-title">Typing Test</div>
                             <div class="game-desc">Test your speed and precision under arcade pressure.</div>
-                            <div class="game-badge">New</div>
+                            <div class="game-badge">New!</div>
                         </div>
                     </a>
 
