--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                     </a>
 
                     <!-- TYPING TEST GAME -->
-                    <a href="/utilty-typing-test/" class="game-card" data-aos="fade-up" data-aos-delay="100">
+                    <a href="https://ragebyters.github.io/utilty-typing-test/" class="game-card" data-aos="fade-up"
+                        data-aos-delay="100">
                         <div class="game-card-content">
                             <div class="game-icon">⌨️</div>
                             <div class="game-title">Typing Test</div>
