Migrated website to react from html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/assets/images/logo.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RageByters | Web Game Arcade</title>
 
     <meta name="description"
@@ -25,407 +25,13 @@
         content="Play bite-sized, open-source rage games instantly in your browser. No downloads, just chaos.">
     <meta property="twitter:image" content="https://ragebyters.github.io/assets/images/logo.png">
 
-    <!-- Favicon -->
-    <link rel="icon" href="assets/images/logo.png" type="image/png">
-
     <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Orbitron:wght@400;700;900&family=Inter:wght@400;600;800&display=swap"
         rel="stylesheet">
-
-    <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-    <!-- AOS Animation Library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-
-    <!-- Typed.js for text animation -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
-
-    <!-- PWA -->
-    <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#0a0e27">
-    <link rel="apple-touch-icon" href="assets/images/logo.png">
-
-    <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-
-<body>
-    <!-- Retro Grid Background -->
-    <canvas id="bg-canvas"></canvas>
-
-    <!-- Navigation -->
-    <nav>
-        <a href="#home" class="nav-logo">
-            <img src="assets/images/logo.png" alt="RageByters Logo" style="height: 30px;">
-            RageByters
-        </a>
-        <button id="mute-btn" title="Toggle Sound">
-            <i class="fas fa-volume-up"></i>
-        </button>
-        <div class="hamburger">
-            <i class="fas fa-bars"></i>
-        </div>
-        <ul class="nav-links">
-            <li><a href="#games">Games</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#roadmap">Roadmap</a></li>
-            <li><a href="#tech">Tech</a></li>
-            <li><a href="#community">Community</a></li>
-        </ul>
-    </nav>
-
-    <main>
-        <!-- Header -->
-        <header id="home">
-            <h1>⚡ RAGEBYTERS ⚡</h1>
-            <p class="subtitle">BITE-SIZED ARCADE</p>
-            <p class="tagline">
-                <span class="typed-text"></span>
-            </p>
-
-            <div class="stats-bar">
-                <div class="stat">
-                    <div class="stat-number">1</div>
-                    <div class="stat-label">Games Live</div>
-                </div>
-                <div class="stat">
-                    <div class="stat-number">100%</div>
-                    <div class="stat-label">Open Source</div>
-                </div>
-                <div class="stat">
-                    <div class="stat-number">∞</div>
-                    <div class="stat-label">Rage Potential</div>
-                </div>
-            </div>
-        </header>
-
-        <!-- Games Section -->
-        <div class="section" id="games">
-            <div class="container">
-                <h2 class="section-title">Play Now</h2>
-
-                <div class="game-grid">
-                    <!-- LIVE GAME -->
-                    <a href="/game-snake/" class="game-card" data-aos="fade-up">
-                        <div class="game-card-content">
-                            <div class="game-icon">🐍</div>
-                            <div class="game-title">Snake</div>
-                            <div class="game-desc">Classic snake with rage mechanics. Eat, grow, survive.</div>
-                            <div class="game-badge">Live</div>
-                        </div>
-                    </a>
-
-<<<<<<< HEAD
-                    <!-- TYPING TEST GAME -->
-                    <a href="https://ragebyters.github.io/utilty-typing-test/" class="game-card" data-aos="fade-up"
-                        data-aos-delay="100">
-                        <div class="game-card-content">
-=======
-                    <div class="game-grid">
-                    <a href="/utilty-typing-test/" class="game-card" data-aos="fade-up" data-aos-delay="100">
-                         <div class="game-card-content">
->>>>>>> 23af1043ad24bf0f4449f17666ea04a7aad50983
-                            <div class="game-icon">⌨️</div>
-                            <div class="game-title">Typing Test</div>
-                            <div class="game-desc">Test your speed and precision under arcade pressure.</div>
-                            <div class="game-badge">New!</div>
-                        </div>
-                    </a>
-
-                    <div class="coming-soon-card" data-aos="fade-up" data-aos-delay="200">
-                        <div class="coming-soon-content">
-                            <div class="coming-soon-icon">⚙️</div>
-                            <div class="coming-soon-badge">Coming Soon</div>
-                        </div>
-                    </div>
-
-                    <div class="coming-soon-card" data-aos="fade-up" data-aos-delay="300">
-                        <div class="coming-soon-content">
-                            <div class="coming-soon-icon">🚀</div>
-                            <div class="coming-soon-badge">Coming Soon</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Features Section -->
-        <div class="section" id="features" style="background: rgba(0, 0, 0, 0.3);">
-            <div class="container">
-                <h2 class="section-title">Why RageByters?</h2>
-
-                <div class="features">
-                    <div class="feature" data-aos="zoom-in">
-                        <div class="feature-icon">⚡</div>
-                        <h3>Lightning Fast</h3>
-                        <p>Zero loading times. Pure browser gaming. Play instantly.</p>
-                    </div>
-
-                    <div class="feature" data-aos="zoom-in" data-aos-delay="100">
-                        <div class="feature-icon">🔓</div>
-                        <h3>100% Open Source</h3>
-                        <p>Every game, every line. All code on GitHub. No secrets.</p>
-                    </div>
-
-                    <div class="feature" data-aos="zoom-in" data-aos-delay="200">
-                        <div class="feature-icon">👥</div>
-                        <h3>Community Driven</h3>
-                        <p>Made by gamers, for gamers. Your voice matters.</p>
-                    </div>
-
-                    <div class="feature" data-aos="zoom-in" data-aos-delay="300">
-                        <div class="feature-icon">🌍</div>
-                        <h3>No Downloads</h3>
-                        <p>Web-based only. Works everywhere. No installations.</p>
-                    </div>
-
-                    <div class="feature" data-aos="zoom-in" data-aos-delay="400">
-                        <div class="feature-icon">🛠️</div>
-                        <h3>Easy to Contribute</h3>
-                        <p>One repo per game. Pick your project. Build with friends.</p>
-                    </div>
-
-                    <div class="feature" data-aos="zoom-in" data-aos-delay="500">
-                        <div class="feature-icon">💪</div>
-                        <h3>Pure Rage</h3>
-                        <p>Games designed to challenge. Fail, rage, retry forever.</p>
-                    </div>
-
-                    <div class="feature" data-aos="zoom-in" data-aos-delay="600">
-                        <div class="feature-icon">🎨</div>
-                        <h3>Creative Freedom</h3>
-                        <p>Build any game you imagine. No restrictions.</p>
-                    </div>
-
-                    <div class="feature" data-aos="zoom-in" data-aos-delay="700">
-                        <div class="feature-icon">🏆</div>
-                        <h3>Leaderboards</h3>
-                        <p>Track scores, compete globally, earn bragging rights.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Tech Stack Section -->
-        <div class="section" id="tech">
-            <div class="container">
-                <h2 class="section-title">Built With</h2>
-
-                <div class="tech-stack">
-                    <div class="tech-item" data-aos="flip-left">
-                        <div class="tech-icon">🔶</div>
-                        <div class="tech-name">HTML5</div>
-                    </div>
-
-                    <div class="tech-item" data-aos="flip-left" data-aos-delay="50">
-                        <div class="tech-icon">🎨</div>
-                        <div class="tech-name">CSS3</div>
-                    </div>
-
-                    <div class="tech-item" data-aos="flip-left" data-aos-delay="100">
-                        <div class="tech-icon">⚙️</div>
-                        <div class="tech-name">JavaScript</div>
-                    </div>
-
-                    <div class="tech-item" data-aos="flip-left" data-aos-delay="150">
-                        <div class="tech-icon">🐙</div>
-                        <div class="tech-name">GitHub</div>
-                    </div>
-
-                    <div class="tech-item" data-aos="flip-left" data-aos-delay="200">
-                        <div class="tech-icon">📄</div>
-                        <div class="tech-name">GitHub Pages</div>
-                    </div>
-
-                    <div class="tech-item" data-aos="flip-left" data-aos-delay="250">
-                        <div class="tech-icon">🎮</div>
-                        <div class="tech-name">WebGL</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Roadmap Section -->
-        <div class="section" style="background: rgba(0, 0, 0, 0.3);" id="roadmap">
-            <div class="container">
-                <h2 class="section-title">Development Roadmap</h2>
-
-                <div class="roadmap">
-                    <div class="roadmap-item" data-aos="fade-right">
-                        <div class="roadmap-icon">1️⃣</div>
-                        <div class="roadmap-content">
-                            <h3>Phase 1: Foundation</h3>
-                            <p>Launch main portal and first 3 games. Build community, set up GitHub organization.</p>
-                            <div class="roadmap-status">In Progress</div>
-                        </div>
-                    </div>
-
-                    <div class="roadmap-item" data-aos="fade-left">
-                        <div class="roadmap-icon">2️⃣</div>
-                        <div class="roadmap-content">
-                            <h3>Phase 2: Expansion</h3>
-                            <p>Add 10+ more games, implement leaderboards, user accounts system.</p>
-                            <div class="roadmap-status">Upcoming</div>
-                        </div>
-                    </div>
-
-                    <div class="roadmap-item" data-aos="fade-right">
-                        <div class="roadmap-icon">3️⃣</div>
-                        <div class="roadmap-content">
-                            <h3>Phase 3: Community</h3>
-                            <p>Discord bot integration, game jam events, community forums, streaming features.</p>
-                            <div class="roadmap-status">Planned</div>
-                        </div>
-                    </div>
-
-                    <div class="roadmap-item" data-aos="fade-left">
-                        <div class="roadmap-icon">4️⃣</div>
-                        <div class="roadmap-content">
-                            <h3>Phase 4: Monetization</h3>
-                            <p>Optional cosmetics, sponsorships, donations. Keep core games 100% free.</p>
-                            <div class="roadmap-status">Future</div>
-                        </div>
-                    </div>
-
-                    <div class="roadmap-item" data-aos="fade-right">
-                        <div class="roadmap-icon">5️⃣</div>
-                        <div class="roadmap-content">
-                            <h3>Phase 5: Global Scale</h3>
-                            <p>Mobile apps, tournaments, partnerships. World domination via mini-games.</p>
-                            <div class="roadmap-status">Vision</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Community Section -->
-        <div class="section" id="community">
-            <div class="container">
-                <h2 class="section-title">Join The Community</h2>
-
-                <div class="community-grid">
-                    <div class="community-card" data-aos="flip-left">
-                        <div class="community-icon">🐙</div>
-                        <h3>GitHub</h3>
-                        <p>Fork, contribute, submit PRs.</p>
-                        <a href="https://github.com/ragebyters" target="_blank">
-                            Visit <i class="fas fa-external-link-alt"></i>
-                        </a>
-                    </div>
-
-                    <div class="community-card" data-aos="flip-left" data-aos-delay="100">
-                        <div class="community-icon">💬</div>
-                        <h3>Discord</h3>
-                        <p>Chat, collaborate, hang out.</p>
-                        <a href="https://discord.gg" target="_blank">
-                            Join Server <i class="fas fa-external-link-alt"></i>
-                        </a>
-                    </div>
-
-                    <div class="community-card" data-aos="flip-left" data-aos-delay="200">
-                        <div class="community-icon">🐦</div>
-                        <h3>Twitter</h3>
-                        <p>Latest updates and news.</p>
-                        <a href="https://twitter.com" target="_blank">
-                            Follow <i class="fas fa-external-link-alt"></i>
-                        </a>
-                    </div>
-
-                    <div class="community-card" data-aos="flip-left" data-aos-delay="300">
-                        <div class="community-icon">📧</div>
-                        <h3>Email</h3>
-                        <p>Questions or suggestions?</p>
-                        <a href="mailto:hello@ragebyters.dev">
-                            Contact Us <i class="fas fa-paper-plane"></i>
-                        </a>
-                    </div>
-
-                    <div class="community-card" data-aos="flip-left" data-aos-delay="400">
-                        <div class="community-icon">📺</div>
-                        <h3>YouTube</h3>
-                        <p>Tutorials & gameplay.</p>
-                        <a href="https://youtube.com" target="_blank">
-                            Subscribe <i class="fas fa-external-link-alt"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- CTA Section -->
-        <div class="section">
-            <div class="cta-section">
-                <div class="cta-content">
-                    <div class="cta-text">Ready to Join the Rage?</div>
-                    <div class="cta-subtext">Start playing, contributing, or creating with RageByters. The future is
-                        unwritten.</div>
-                    <div class="btn-group">
-                        <a href="https://github.com/ragebyters" class="btn-primary" target="_blank">
-                            <i class="fab fa-github"></i> View on GitHub
-                        </a>
-                        <a href="https://github.com/ragebyters/ragebyters.github.io" class="btn-secondary"
-                            target="_blank">
-                            <i class="fas fa-code-branch"></i> Fork This Site
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-
-    <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <h3 style="color: var(--accent-red); margin-bottom: 20px;">RAGEBYTERS</h3>
-
-            <div class="social-links">
-                <a href="https://github.com/ragebyters" title="GitHub" target="_blank">
-                    <i class="fab fa-github"></i>
-                </a>
-                <a href="https://twitter.com" title="Twitter" target="_blank">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="https://discord.gg" title="Discord" target="_blank">
-                    <i class="fab fa-discord"></i>
-                </a>
-                <a href="https://youtube.com" title="YouTube" target="_blank">
-                    <i class="fab fa-youtube"></i>
-                </a>
-                <a href="mailto:hello@ragebyters.dev" title="Email">
-                    <i class="fas fa-envelope"></i>
-                </a>
-            </div>
-
-            <div class="divider"></div>
-
-            <div class="footer-links">
-                <a href="https://github.com/ragebyters" target="_blank">GitHub</a>
-                <a href="#games">Games</a>
-                <a href="#features">Features</a>
-                <a href="#roadmap">Roadmap</a>
-                <a href="#tech">Tech</a>
-                <a href="#community">Community</a>
-                <a href="https://github.com/ragebyters/ragebyters.github.io/blob/main/LICENSE"
-                    target="_blank">License</a>
-            </div>
-
-            <p style="margin-top: 30px; font-size: 0.9rem;">
-                RageByters © 2026 | Open Source Gaming Arcade
-            </p>
-            <p style="margin-top: 10px; font-size: 0.8rem; color: var(--accent-cyan);">
-                Built with ❤️ and pure rage by the community.
-            </p>
-        </div>
-    </footer>
-
-    <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/background.js"></script>
-
-</body>
-
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
